Replaced font awesome with material icons

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -12,5 +12,25 @@ $card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 2px 1px rgba($black, 0.1) !defaul
 .card-shadow 
   box-shadow: $card-shadow
 
+.mdi-icon
+  fill: currentColor
+  width: 1.2em
+  height: 1.2em
+
+.mdi-icon-spacer
+  margin-right: 2px
+
+.mdi-icon-medium
+  width: 2.1em
+  height: 2.1em
+
+.mdi-icon-large
+  width: 3em
+  height: 3em
+
+.mdi-icon-titanic
+  width: 7em
+  height: 7em
+
 // 3. Import the rest of Bulma;
 @import 'bulma/bulma'
