The editor sidebar now scrolls with the editor on desktop

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -43,5 +43,11 @@ $card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 2px 1px rgba($black, 0.1) !defaul
   color: red
   border: 1px dotted orange
 
+.sidebar
+  @media (min-width: $tablet)
+    position: fixed
+    margin-right: 1.5rem
+
+
 // 3. Import the rest of Bulma;
 @import 'bulma/bulma'
