--- a/styles/style.sass
+++ b/styles/style.sass
@@ -43,6 +43,9 @@ $card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 2px 1px rgba($black, 0.1) !defaul
   color: red
   border: 1px dotted orange
 
+.editor-el-link
+  text-decoration: underline
+
 .sidebar
   @media (min-width: $tablet)
     position: fixed
