Added code blocks, external links now open in new tab

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -39,6 +39,12 @@ $card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 2px 1px rgba($black, 0.1) !defaul
 .editor-el-code
   color: black
 
+.editor-el-code-block
+  white-space: pre-wrap
+  color: black
+  padding: 0px !important
+  margin-bottom: 0px !important
+
 .editor-el-error
   color: red
   border: 1px dotted orange
