Pages can be created

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -14,6 +14,10 @@ $card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 2px 1px rgba($black, 0.1) !defaul
 .card-shadow 
   box-shadow: $card-shadow
 
+// Columns have an additional right margin by default
+.columns
+  margin-right: 0 !important
+
 // Icon format
 .mdi-icon
   fill: currentColor
