--- a/styles/style.sass
+++ b/styles/style.sass
@@ -69,7 +69,14 @@ $card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 2px 1px rgba($black, 0.1) !defaul
   +mobile
     left: 20%
     width: 80%
-    
+
+.overlay-notification-progress
+  position: absolute !important
+  left: 0 !important
+  right: 0 !important
+  bottom: 0 !important
+  border-radius: 4px !important
+
 @keyframes pop-in
   0%
     opacity: 0
