Added upload for files in the file browser

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -57,6 +57,9 @@ $card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 2px 1px rgba($black, 0.1) !defaul
 .jodit_statusbar
   border-radius: 0 0 4px 4px !important
 
+.jodit_filebrowser_files.active.jodit_filebrowser_files_view-list a img
+  height: 16px !important
+
 // Notification overlay
 #overlay
   position: fixed
