Added a small border to user uploaded images

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -86,6 +86,11 @@ $card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 2px 1px rgba($black, 0.1) !defaul
   bottom: 0 !important
   border-radius: 4px !important
 
+// Adds a border to images added by the user.
+.user-content img
+  margin: 5px
+  box-shadow: $card-shadow
+
 @keyframes pop-in
   0%
     opacity: 0
